 * Removed the special environment variable passing for MDChallengeDns01 again as
   this interferes with needed environment variables on platforms.
 * mod_md is enabled in freebsd's apache24 package since August 2020, thanks to
   Mina Galić (@igalic). Nice!

v2.3.6 (BETA)
----------------------------------------------------------------------------------------------------
 * Andreas Ulm (<https://github.com/root360-AndreasUlm>) implemented the ```renewing``` call
   to ```MDMessageCmd``` that can deny a certificate renewal attempt. This is useful in clustered
   installations, as discussed in #233).
 * Fixed tests to accommodate for the new message type.

v2.3.5 (BETA)
----------------------------------------------------------------------------------------------------
 * Certain error codes reported by the ACME server that indicate a problem with the
   configured data now immediately switch to daily retries. For example: if the ACME
   server rejects a contact email or a domain name, frequent retries will most likely
   not solve the problem. But daily retries still make sense as there might be an
   error at the server and un-supervised certificate renewal is the goal. Refs #222.
 * The max delay for retries has been raised to daily (this is like all retries jittered
   somewhat to avoid repeats at fixed time of day).
 * No longer debug logging the ocsp renewal success with an error indicator. Fixes #197.
 * When handling ACME authorization resources, the module no longer requires the server
   to return a "Location" header, as was necessary in ACMEv1. Fixes #216.
 * Removed the "authz" subcommand from the a2md executable. This was a left over of ACMEv1.
 * The module now reuses the internal curl instance in each MDs interaction
   with the ACME server. This means that open connections are reused.

v2.3.4 (BETA)
----------------------------------------------------------------------------------------------------